@@ -1,8 +1,16 @@
 CVS code -
+- cut.c:
+  do_uncut_text()
+	- Fix renumbering bug when uncutting marked test at filebot.
+	- Fix screen not being displayed when we are uncutting marked
+	  text at editbot (Bug discovered by Ken Tyler).
 - files.c:
   write_file()
 	- Change open call flags, basically copy joe's way of doing it so
 	  a more recent version will actually be included in (un)stable.
+- nano.c:
+  renumber()
+	- Dont stupidly assign the value of prev->lineno if prev == NULL!
 
 nano 0.9.23 - 12/08/2000
 General
